RESOLVED FIXED255614
[GStreamer][WebRTC] RTP payload type numbers are incorrect and prone to collisions in our SDP offers
https://bugs.webkit.org/show_bug.cgi?id=255614
Summary [GStreamer][WebRTC] RTP payload type numbers are incorrect and prone to colli...
Philippe Normand
Reported 2023-04-18 10:28:55 PDT
oops
Attachments
Philippe Normand
Comment 1 2023-04-18 10:35:08 PDT
EWS
Comment 2 2023-04-19 09:01:32 PDT
Committed 263135@main (3544d3031a90): <https://commits.webkit.org/263135@main> Reviewed commits have been landed. Closing PR #12874 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-04-19 09:02:21 PDT
Note You need to log in before you can comment on or make changes to this bug.