[GStreamer][WebRTC] RTP payload type numbers are incorrect and prone to collisions in our SDP offers https://bugs.webkit.org/show_bug.cgi?id=255614

Reviewed by Xabier Rodriguez-Calvar.

Use static payload types for the legacy audio codecs, as mandated by their respective RTP payload
RFCs and for dynamic payloads, use unique identifiers, starting at 96. See also
https://www.iana.org/assignments/rtp-parameters/rtp-parameters.xhtml

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:
(WebCore::GStreamerMediaEndpoint::requestPad):
(WebCore::GStreamerMediaEndpoint::pickAvailablePayloadType):
(WebCore::GStreamerMediaEndpoint::createTransceiverBackends):
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.h:
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerWebRTCUtils.cpp:
(WebCore::payloadTypeForEncodingName):
(WebCore::capsFromRtpCapabilities):
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerWebRTCUtils.h:

Canonical link: https://commits.webkit.org/263135@main